# efengine

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
assets/models/: industrial_pipe_lamp_2k.fbx
assets/shaders/: bloom_composite.frag  blur.frag  brightpass.frag  fxaa.frag  pbr.frag  pbr.vert  phong.frag  phong.vert  screen.frag  screen.vert  shadow_depth.frag  shadow_depth.vert  skybox.frag  skybox.vert  tonemap.frag
assets/shaders/ibl/: equirect_to_cube.comp  irradiance_convolve.comp
cmake/: Doxyfile.in
sandbox/: CMakeLists.txt  main.cpp
sh/: README.md  _config.ps1  build.ps1  clean.ps1  configure.ps1  rebuild.ps1  run.ps1  test.ps1
src/: CMakeLists.txt
src/efengine/: CMakeLists.txt
src/efengine/application/: Application.cpp  Application.h  CMakeLists.txt  DebugUI.cpp  DebugUI.h
src/efengine/core/: Assert.cpp  Assert.h  CMakeLists.txt  Log.cpp  Log.h  Time.cpp  Time.h  Types.cpp  Types.h
src/efengine/math/: CMakeLists.txt  Math.h  Transform.cpp  Transform.h
src/efengine/platform/: CMakeLists.txt  IEventListener.cpp  IEventListener.h  InputCodes.cpp  InputCodes.h  Window.cpp  Window.h
src/efengine/renderer/: BloomPass.cpp  BloomPass.h  Buffer.cpp  Buffer.h  CMakeLists.txt  Context.cpp  Context.h  Cubemap.cpp  Cubemap.h  DirectionalLight.h  Environment.cpp  Environment.h  Framebuffer.cpp  Framebuffer.h  FxaaPass.cpp  FxaaPass.h  IPostPass.h  IndexBuffer.cpp  IndexBuffer.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  PointLight.cpp  PointLight.h  PostChain.cpp  PostChain.h  Primitives.cpp  Primitives.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  ShadowContext.h  ShadowMap.cpp  ShadowMap.h  ShadowMath.cpp  ShadowMath.h  (+14 more)
src/efengine/resources/: CMakeLists.txt  FileIO.cpp  FileIO.h  ModelLoader.cpp  ModelLoader.h  ResourceManager.cpp  ResourceManager.h
src/efengine/scene/: CMakeLists.txt  Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  Scene.cpp  Scene.h  SceneObject.cpp  SceneObject.h
tests/: CMakeLists.txt  main.cpp
tests/core/: Time.test.cpp  Types.test.cpp
tests/math/: Transform.test.cpp
tests/platform/: InputCodes.test.cpp
tests/renderer/: Cubemap.test.cpp  PostChain.test.cpp  ShadowMath.test.cpp  Vertex.test.cpp  VertexLayout.test.cpp
tests/resources/: FileIO.test.cpp  ResourceManager.test.cpp
tests/scene/: Camera.test.cpp  CameraController.test.cpp  Scene.test.cpp
